Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/abstract/T4717181c.out
T4717181c.java:15:21: compiler.err.types.incompatible: T4717181c.A<java.lang.Integer>, T4717181c.A<java.lang.Integer>, (compiler.misc.incompatible.diff.ret: f, java.lang.Integer)
1 error
